--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   
   
   <title>Home</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -24,38 +23,39 @@
   
 </head>
 <body>
-  <section class="cid-s5dc5grmGa mbr-fullscreen mbr-parallax-background" id="header2-0">
+  <section class="header4 cid-s5dlQdIPfu mbr-parallax-background" id="header4-1">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(35, 35, 35);">
+    </div>
 
-    <div class="container align-center">
+    <div class="container">
         <div class="row justify-content-md-center">
-            <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    PREZENTACJA NA PEŁNYM EKRANIE
+            <div class="media-content col-md-10">
+                <h1 class="mbr-section-title align-center mbr-white pb-3 mbr-bold mbr-fonts-style display-1">
+                    PREZENTACJA Z OBRAZKIEM
                 </h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Kliknij dowolny tekst, aby go edytować lub poprawić. Zaznacz tekst, aby wstawić łącze. Kliknij niebieską ikonę "zębatki" w prawym górnym rogu, aby pokazać/ukryć przyciski, tekst, tytuł i zmienić tło segmentu. Kliknij czerwony "+" w prawym dolnym rogu, aby dodać nowy segment. Użyj menu w lewym górnym rogu, aby tworzyć nowe strony, witryny i dodawć motywy.
-                </p>
-                <div class="mbr-section-btn">
-                    <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">DOWIEDZ SIĘ WIĘCEJ</a>
+                <div class="mbr-text align-center mbr-white pb-3">
+                    <p class="mbr-text mbr-fonts-style display-5">
+                        Prezentacja z obrazkiem w tle, kolorową nakładką oraz małym obrazkiem na dole. "Mobirise" pomaga skrócić czas pracy, dając Ci elastyczny edytor stron internetowych z funkcją przeciągania i upuszczania.
+                    </p>
+                </div>
+                <div class="mbr-section-btn align-center">
+                    <a class="btn btn-md btn-primary display-4" href="https://mobirise.co">DOWIEDZ SIĘ WIĘCEJ</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">DEMO</a>
                 </div>
             </div>
+            <div class="mbr-figure pt-5">
+                <img src="assets/images/background2.jpg" alt="Mobirise" style="width: 60%;">
+            </div>
         </div>
-    </div>
-    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-        <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
     </div>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
