--- a/index.html
+++ b/index.html
@@ -11,51 +11,32 @@
   
   
   <title>Home</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
 <body>
-  <section class="header4 cid-s5dlQdIPfu mbr-parallax-background" id="header4-1">
+  <section class="mbr-gallery mbr-slider-carousel cid-s5dml02xve" id="gallery2-2">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(35, 35, 35);">
+    <div class="container">
+        <div><!-- Filter --><div class="mbr-gallery-filter container gallery-filter-active"><ul buttons="0"><li class="mbr-gallery-filter-all active"><a class="btn btn-md btn-primary-outline display-7" href="">All</a></li></ul></div><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Niesamowite"><div href="#lb-gallery2-2" data-slide-to="0" data-toggle="modal"><img src="assets/images/background1.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Wrażliwe"><div href="#lb-gallery2-2" data-slide-to="1" data-toggle="modal"><img src="assets/images/background2.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Twórcze"><div href="#lb-gallery2-2" data-slide-to="2" data-toggle="modal"><img src="assets/images/background3.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Animowane"><div href="#lb-gallery2-2" data-slide-to="3" data-toggle="modal"><img src="assets/images/background4.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Niesamowite"><div href="#lb-gallery2-2" data-slide-to="4" data-toggle="modal"><img src="assets/images/background5.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Niesamowite"><div href="#lb-gallery2-2" data-slide-to="5" data-toggle="modal"><img src="assets/images/background6.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Wrażliwe"><div href="#lb-gallery2-2" data-slide-to="6" data-toggle="modal"><img src="assets/images/background7.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Animowane"><div href="#lb-gallery2-2" data-slide-to="7" data-toggle="modal"><img src="assets/images/background8.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-2"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item active"><img src="assets/images/background1.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/background2.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/background3.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/background4.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/background5.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/background6.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/background7.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/background8.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-2"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-2"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
     </div>
 
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="media-content col-md-10">
-                <h1 class="mbr-section-title align-center mbr-white pb-3 mbr-bold mbr-fonts-style display-1">
-                    PREZENTACJA Z OBRAZKIEM
-                </h1>
-                
-                <div class="mbr-text align-center mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">
-                        Prezentacja z obrazkiem w tle, kolorową nakładką oraz małym obrazkiem na dole. "Mobirise" pomaga skrócić czas pracy, dając Ci elastyczny edytor stron internetowych z funkcją przeciągania i upuszczania.
-                    </p>
-                </div>
-                <div class="mbr-section-btn align-center">
-                    <a class="btn btn-md btn-primary display-4" href="https://mobirise.co">DOWIEDZ SIĘ WIĘCEJ</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">DEMO</a>
-                </div>
-            </div>
-            <div class="mbr-figure pt-5">
-                <img src="assets/images/background2.jpg" alt="Mobirise" style="width: 60%;">
-            </div>
-        </div>
-    </div>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
@@ -63,8 +44,14 @@
   <script src="assets/facebook-plugin/facebook-script.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/masonry/masonry.pkgd.min.js"></script>
+  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/gallery/player.min.js"></script>
+  <script src="assets/gallery/script.js"></script>
+  <script src="assets/slidervideo/script.js"></script>
   
   
 </body>
