create github pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.co">
-                         <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
+                         <img src="assets/images/logo2.png" alt="Mobirise" style="height: 6.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap">
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dml02xve" id="gallery2-2">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dml02xve" id="gallery2-2">
 
     
 
