create github pages

--- a/index.html
+++ b/index.html
@@ -46,11 +46,8 @@
                          <img src="assets/images/logo2.png" alt="Mobirise" style="height: 6.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
+                        Andrzej Bednarz - Fotograf</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -71,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dml02xve" id="gallery2-2">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dml02xve" id="gallery2-2">
 
     
 
