--- a/index.html
+++ b/index.html
@@ -43,38 +43,28 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-black display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
+                        ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="https://mobirise.co">
                         Usługi
                     </a>
-                </li>
-                <li class="nav-item">
+                </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="https://mobirise.co">
-                        O nas
-                    </a>
-                </li>
-            </ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
+                        O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
+                </li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
-                    +1-234-567-8901
-                </a>
-            </div>
+                    +48 576-996-046</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
