create github pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -73,9 +73,8 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    FULL SCREEN INTRO
-                </h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">
+                    FOTOGRAFIA PRZEZ DUŻE &nbsp;F</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Click any text to edit or style it. Select text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
@@ -102,34 +101,25 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
-                        <img src="assets/images/logo2.png" alt="Mobirise">
+                    <a href="https://abednarz.pl">
+                        <img src="../../app/themes/mobirise4/components" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Address
-                </h5>
-                <p class="mbr-text">
-                    1234 Street Name
-                    <br>City, AA 99999
-                </p>
+                <h5 class="pb-3"></h5>
+                <p class="mbr-text">Rybnik<br>śląskie, Polska</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    Contacts
-                </h5>
+                    Kontakt</h5>
                 <p class="mbr-text">
-                    Email: support@mobirise.com
-                    <br>Phone: +1 (0) 000 0000 001
-                    <br>Fax: +1 (0) 000 0000 002
-                </p>
+                    Email: abednarz@live.com
+                    <br>Phone: +48 576-996-046 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    Links
-                </h5>
+                    Linki</h5>
                 <p class="mbr-text">
                     <a class="text-primary" href="https://mobirise.com/">Website builder</a>
                     <br><a class="text-primary" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a>
@@ -146,7 +136,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2020 Mobirise - All Rights Reserved
+                        © Copyright 2020 Andrzej Bednarz - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
