--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -76,9 +76,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">
                     FOTOGRAFIA PRZEZ DUŻE &nbsp;F</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Click any text to edit or style it. Select text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
-                </p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Kiedy fotografuję, to otwartym okiem patrzę na świat,<br>a zamkniętym spoglądam w głąb siebie</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.com">LEARN MORE</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
             </div>
@@ -102,7 +100,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://abednarz.pl">
-                        <img src="../../app/themes/mobirise4/components" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-132x88.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
