create github pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="http://abednarz.pl">
                         ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF</a></span>
             </div>
         </div>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
