--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -42,7 +42,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="http://abednarz.pl">
                         ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF</a></span>
             </div>
         </div>
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
 
     
 
