--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl">
-                        ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF</a></span>
+                        ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF / GRAFIK</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
