--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -43,14 +43,15 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl/index.html">
                         ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF / GRAFIK</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
-                        Galeria</a>
+                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
+                        Usługi
+                    </a>
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="https://mobirise.co">
                         O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
@@ -63,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
 
     
 
