--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl/index.html">
                         ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF / GRAFIK</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
-                        Galeria</a>
+                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
+                        Usługi
+                    </a>
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="https://mobirise.co">
                         O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
@@ -62,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
