--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -49,9 +49,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
-                        Usługi
-                    </a>
+                    <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
+                        Galeria</a>
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="https://mobirise.co">
                         O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
@@ -64,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
 
     
 
