--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
-                        Usługi
-                    </a>
+                    <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
+                        Galeria</a>
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="https://mobirise.co">
                         O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
@@ -63,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -76,7 +75,7 @@
                     FOTOGRAFIA PRZEZ DUŻE &nbsp;F</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Kiedy fotografuję, to otwartym okiem patrzę na świat,<br>a zamkniętym spoglądam w głąb siebie</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.com">LEARN MORE</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://abednarz.pl/galeria_abednarz">MOJE PORTFOLIO</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
             </div>
         </div>
