--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -43,7 +43,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://abednarz.pl/index.html">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html">
                         ANDRZEJ BEDNARZ &nbsp;- &nbsp;FOTOGRAF / GRAFIK</a></span>
             </div>
         </div>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
 
     
 
