--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -54,7 +54,7 @@
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="omnie-abednarz.html">
                         O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="omnie-abednarz.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
 
     
 
