create github pages

--- a/kontakt-abednarz.html
+++ b/kontakt-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
     <!---->
     
     <!---->
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"></h5>
+                <h5 class="pb-3">Tutaj mieszkam</h5>
                 <p class="mbr-text">Rybnik<br>śląskie, Polska</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
