create github pages

--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
 
     
 
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="cid-s5dZVW6ICQ" id="footer1-7">
+<section class="cid-s5elbIMqJH" id="footer1-o">
 
     
 
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"></h5>
+                <h5 class="pb-3">Tutaj mieszkam</h5>
                 <p class="mbr-text">Rybnik<br>śląskie, Polska</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
