--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -88,7 +88,7 @@
     </div>
 </section>
 
-<section class="cid-qTkAaeaxX5" id="footer1-2">
+<section class="cid-s5el1mNRTx" id="footer1-m">
 
     
 
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"></h5>
+                <h5 class="pb-3">Tutaj mieszkam</h5>
                 <p class="mbr-text">Rybnik<br>śląskie, Polska</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
