--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
@@ -127,7 +127,7 @@
     </div>
 </section>
 
-<section class="cid-s5ebCaZrml" id="footer1-e">
+<section class="cid-s5el7rgN3M" id="footer1-n">
 
     
 
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"></h5>
+                <h5 class="pb-3">Tutaj mieszkam</h5>
                 <p class="mbr-text">Rybnik<br>śląskie, Polska</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
