create github pages

--- a/kontakt-abednarz.html
+++ b/kontakt-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
     <!---->
     
     <!---->
@@ -113,7 +113,7 @@
     </div>
 </section>
 
-<section class="cid-s5ejDW2x8D" id="footer1-l">
+<section class="cid-s5epwfcWZ3" id="footer1-s">
 
     
 
@@ -140,13 +140,8 @@
                     <br>Phone: +48 576-996-046 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Linki</h5>
-                <p class="mbr-text">
-                    <a class="text-primary" href="https://mobirise.com/">Website builder</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a>
-                </p>
+                <h5 class="pb-3"></h5>
+                <p class="mbr-text"><br>&nbsp;<br><br></p>
             </div>
         </div>
         <div class="footer-lower">
