--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
@@ -127,7 +127,7 @@
     </div>
 </section>
 
-<section class="cid-s5el7rgN3M" id="footer1-n">
+<section class="cid-s5epAtmXdQ" id="footer1-t">
 
     
 
@@ -154,13 +154,8 @@
                     <br>Phone: +48 576-996-046 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Linki</h5>
-                <p class="mbr-text">
-                    <a class="text-primary" href="https://mobirise.com/">Website builder</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a>
-                </p>
+                <h5 class="pb-3"></h5>
+                <p class="mbr-text"><br>&nbsp;<br><br></p>
             </div>
         </div>
         <div class="footer-lower">
