--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section article content10 cid-s5enRQ2oiG" id="content10-q">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section article content10 cid-s5enRQ2oiG" id="content10-q">
     
      
 
@@ -114,13 +114,8 @@
                     <br>Phone: +48 576-996-046 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Linki</h5>
-                <p class="mbr-text">
-                    <a class="text-primary" href="https://mobirise.com/">Website builder</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a>
-                </p>
+                <h5 class="pb-3"></h5>
+                <p class="mbr-text"><br>&nbsp;<br><br></p>
             </div>
         </div>
         <div class="footer-lower">
