--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section article content9 cid-s5er0VDzWU" id="content9-v">
+<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="mbr-section article content9 cid-s5er0VDzWU" id="content9-v">
     
      
 
@@ -84,7 +84,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-fonts-style display-5">Niniejsza galeria się tworzy, gdyż jest to świeżo otworzona moja strona.<br>Zdjęcia tutaj zaprezentowane są umieszczone tylko do celów podglądowych, <br>ale włąśnie tak wyobrażam sobie moją galerię.
+            <div class="section-text align-center mbr-fonts-style display-5">Niniejsza galeria się tworzy, gdyż jest to świeżo otworzona moja strona.<br>Zdjęcia tutaj zaprezentowane są umieszczone tylko do celów podglądowych, <br>ale właśnie tak wyobrażam sobie moją galerię.
 <div>Nie zapomnij wejść tutaj za kilka dni. Zamierzam wypełnić moją galerię jak najszybciej.</div></div>
             <hr class="line" style="width: 25%;">
         </div>
