create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -88,7 +88,7 @@
     </div>
 </section>
 
-<section class="cid-s5epsum6vH" id="footer1-r">
+<section class="cid-s5ezBZITh1" id="footer1-10">
 
     
 
@@ -98,8 +98,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://abednarz.pl">
-                        <img src="assets/images/mbr-132x88.jpg" alt="Mobirise" title="">
+                    <a href="kontakt-abednarz.html">
+                        <img src="assets/images/mbr-288x192.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
