--- a/kontakt-abednarz.html
+++ b/kontakt-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
     <!---->
     
     <!---->
@@ -113,7 +113,7 @@
     </div>
 </section>
 
-<section class="cid-s5epwfcWZ3" id="footer1-s">
+<section class="cid-s5ezForCTX" id="footer1-11">
 
     
 
@@ -123,8 +123,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://abednarz.pl">
-                        <img src="assets/images/mbr-132x88.jpg" alt="Mobirise" title="">
+                    <a href="kontakt-abednarz.html">
+                        <img src="assets/images/mbr-288x192.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
