--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
@@ -127,7 +127,7 @@
     </div>
 </section>
 
-<section class="cid-s5epAtmXdQ" id="footer1-t">
+<section class="cid-s5ezJsk2Sl" id="footer1-12">
 
     
 
@@ -137,8 +137,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://abednarz.pl">
-                        <img src="assets/images/mbr-132x88.jpg" alt="Mobirise" title="">
+                    <a href="kontakt-abednarz.html">
+                        <img src="assets/images/mbr-288x192.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
