--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
     
      
 
@@ -98,8 +98,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://abednarz.pl">
-                        <img src="assets/images/mbr-132x88.jpg" alt="Mobirise" title="">
+                    <a href="kontakt-abednarz.html">
+                        <img src="assets/images/mbr-288x192.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
