create github pages

--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -63,14 +63,14 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
     
 
     <div class="container pt-4 mt-2">
-        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">Co nieco o mnie o mnie ...</h2>
+        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">Co nieco o mnie ...</h2>
         <h3 class="mbr-section-subtitle pb-5 align-center mbr-fonts-style display-5">Robienie zdjęcia, zamrożenie chwili, pokazuję, jak naprawdę jest bogata rzeczywistość</h3>
         <div class="media-container-row">
             <div class="media-block m-auto" style="width: 49%;">
