--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
     
      
 
