create github pages

--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
