create github pages

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173216357-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-173216357-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-s5dLX3UWVr" once="menu" id="menu2-3">
 
     
@@ -48,12 +63,13 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
-                        Galeria</a>
-                </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="omnie-abednarz.html">
                         O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
+                </li><li class="nav-item">
+                    <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
+                        Galeria</a>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="kontakt-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="true">
+                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="kontakt-abednarz.html">Komunie</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -63,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
