create github pages

--- a/fotograf-komunia-abednarz.html
+++ b/fotograf-komunia-abednarz.html
@@ -78,13 +78,14 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section article content1 cid-s5vp6CdAOX" id="content1-17">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section article content1 cid-s5vpM1soh9" id="content1-18">
     
      
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>
+                <strong> Utwórz własną stronę internetową za pomocą kilku kliknięć</strong> Jako wszechstronny edytor z funkcją przeciągania i upuszczania, "Mobirise" pomaga skrócić czas przygotowania projektu, zisiaj. Możesz utworzyć tyle stron, ilu potrzebujesz.</p></div>
         </div>
     </div>
 </section>
