--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     Kontakt</h5>
                 <p class="mbr-text">
                     Email: abednarz@live.com
-                    <br>Phone: +48 576-996-046 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
+                    <br>Telefon: +48 576-996-046 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"></h5>
