create github pages

--- a/fotograf-komunia-abednarz.html
+++ b/fotograf-komunia-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section article content1 cid-s5vlGXv8lm" id="content2-16">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="mbr-section article content1 cid-s5vlGXv8lm" id="content2-16">
 
      
 
