--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
     
      
 
