create github pages

--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
 
      
 
