create github pages

--- a/fotograf-bierzmowanie-abednarz.html
+++ b/fotograf-bierzmowanie-abednarz.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content1 cid-s5vOVgEhWj" id="content2-1q">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="mbr-section article content1 cid-s5vOVgEhWj" id="content2-1q">
 
      
 
