--- a/fotograf-osiemnastki-abednarz.html
+++ b/fotograf-osiemnastki-abednarz.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="header1 cid-s5Rc3rlDwv mbr-parallax-background" id="header1-1y">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header1 cid-s5Rc3rlDwv" id="header1-1y">
 
     
 
@@ -228,7 +228,6 @@
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
