create github pages

--- a/fotograf-osiemnastki-abednarz.html
+++ b/fotograf-osiemnastki-abednarz.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-s5RfqbDJVy mbr-fullscreen mbr-parallax-background" id="header2-1z">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-s5RfqbDJVy mbr-fullscreen mbr-parallax-background" id="header2-1z">
 
     
 
