create github pages

--- a/fotograf-komunia-abednarz.html
+++ b/fotograf-komunia-abednarz.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section article content1 cid-s5vlGXv8lm" id="content2-16">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content1 cid-s5vlGXv8lm" id="content2-16">
 
      
 
