--- a/fotograf-osiemnastka-abednarz.html
+++ b/fotograf-osiemnastka-abednarz.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-s5RllZc863 mbr-fullscreen mbr-parallax-background" id="header2-1w">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
 
     
 
@@ -87,17 +87,12 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    PREZENTACJA NA PEŁNYM EKRANIE
-                </h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">
+                    UWIECZNIĘ TWOJE<br>18 URODZINY NA ZDJĘCIACH</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Kliknij dowolny tekst, aby go edytować lub poprawić. Zaznacz tekst, aby wstawić łącze. Kliknij niebieską ikonę "zębatki" w prawym górnym rogu, aby pokazać/ukryć przyciski, tekst, tytuł i zmienić tło segmentu. Kliknij czerwony "+" w prawym dolnym rogu, aby dodać nowy segment. Użyj menu w lewym górnym rogu, aby tworzyć nowe strony, witryny i dodawć motywy.
-                </p>
-                <div class="mbr-section-btn">
-                    <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">DOWIEDZ SIĘ WIĘCEJ</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">DEMO</a>
-                </div>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Szykuje się impreza z okazji Twojej osiemnastki i zastanawiasz się nad fotografem? 
+<br>Dobrze trafiłeś/aś ! Wykonam reportaż z całej imprezy. Zleć to mnie.</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">DOWIEDZ SIĘ WIĘCEJ</a></div>
             </div>
         </div>
     </div>
