--- a/fotograf-osiemnastka-abednarz.html
+++ b/fotograf-osiemnastka-abednarz.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
 
     
 
@@ -92,7 +92,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Szykuje się impreza z okazji Twojej osiemnastki i zastanawiasz się nad fotografem? 
 <br>Dobrze trafiłeś/aś ! Wykonam reportaż z całej imprezy. Zleć to mnie.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">DOWIEDZ SIĘ WIĘCEJ</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="fotograf-osiemnastka-abednarz.html">DOWIEDZ SIĘ WIĘCEJ</a></div>
             </div>
         </div>
     </div>
