--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
 
      
 
