create github pages

--- a/fotograf-osiemnastka-abednarz.html
+++ b/fotograf-osiemnastka-abednarz.html
@@ -78,11 +78,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
+    
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
