create github pages

--- a/kontakt-abednarz.html
+++ b/kontakt-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
     <!---->
     
     <!---->
