create github pages

--- a/fotograf-osiemnastka-abednarz.html
+++ b/fotograf-osiemnastka-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
 
     
 
