--- a/fotograf-komunia-abednarz.html
+++ b/fotograf-komunia-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-s5T3PCJ78Y mbr-fullscreen mbr-parallax-background" id="header2-1x">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-s5T3PCJ78Y mbr-fullscreen mbr-parallax-background" id="header2-1x">
 
     
 
