--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
 
      
 
