--- a/sesje-narzeczeskie-strefa-abednarz.html
+++ b/sesje-narzeczeskie-strefa-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
