--- a/komunijny-czerwiec.html
+++ b/komunijny-czerwiec.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="cid-s95UqhdELT" id="image4-2f">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-s95UqhdELT" id="image4-2f">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
@@ -104,8 +104,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Komunijny czerwiec
-</strong></p><p><strong>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Komunijny czerwiec </strong><em>(2020.07.15)</em></p><p><strong>
 </strong></p><p><strong>Tegoroczny czerwiec przebiegał inaczej niż w poprzednich latach. Z powodu epidemii koronawirusa wszystko się poprzestawiało również w zleceniach fotograficznych. Tym razem czerwiec okazał się miesiącem komunijnym, a nie maj jak było dotychczas. 
 </strong></p><p>Covid-19 zmienił praktycznie wszystko w funkcjonowaniu życia społecznego i gospodarczego w roku 2020.
 </p><p>Planowane na maj uroczystości komunijne zostały odmawiane i przekładane na inne terminy. Różnie to wyglądało w poszczególnych parafiach. Nowe terminy wyznaczono na wrzesień lub przekładano komunie na rok 2021. W parafii św. Antoniego w Katowicach-Starych Panewnikach zdecydowano, aby przeprowadzić komunie w czerwcu tego roku.
